@@ -43,6 +43,7 @@ Breaking Changes:
 
 Other Changes:
 
+- Style: border sizes are now scaled (and rounded) by ScaleAllSizes().
 - Clipper: clear DisplayStart/DisplayEnd fields when Step() returns false.
 
 
